[package]
name = "mica"
version = "0.0.0"
edition = "2024"

[dependencies]
rand = "0.9"
noise = "0.9"
pathfinding = "4.14"
num-traits = { version = "0.2", default-features = false }

# bevy
bevy = { version = "0.15" }

# plugins
avian2d = { version = "0.2", features = [] }
ecs-tilemap = { package = "bevy_ecs_tilemap", version = "0.15" }
inspector-egui = { package = "bevy-inspector-egui", version = "0.29" }
pancam = { package = "bevy_pancam", version = "0.17", features = ["bevy_egui"] }

[features]
debug = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
