[package]
name = "mica"
version = "0.0.0"
edition = "2024"

[dependencies]
rand = "0.9"
noise = "0.9"
pathfinding = "4.14"
num-traits = { version = "0.2", default-features = false }
ordered-float = { version = "4.6.0", default-features = false }

# bevy
bevy = { version = "0.15" }

# plugins
avian2d = { version = "0.2", features = [] }
ecs-tilemap = { package = "bevy_ecs_tilemap", version = "0.15" }
inspector-egui = { package = "bevy-inspector-egui", version = "0.29" }
pancam = { package = "bevy_pancam", version = "0.17", features = ["bevy_egui"] }
hanabi = { package = "bevy_hanabi", version = "0.15", default-features = false, features = ["2d"] }

# override
log = { version = "*", optional = true }

[features]
debug = ["bevy/dynamic_linking"]
release = ["log/release_max_level_error"]

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
